--- a/_posts/2016-03-27-Go语言传值和深浅复制问题.markdown
+++ b/_posts/2016-03-27-Go语言传值和深浅复制问题.markdown
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "Golang-传值or传引用&深浅复制问题"
+title:      "Go语言传值和深浅复制问题"
 date:       2016-03-27 12:05
 author:     "KC"
 header-img: "img/post-bg-unix-linux.jpg"
