--- a/_posts/2015-09-24-如何查找Linux命令是否存在.markdown
+++ b/_posts/2015-09-24-如何查找Linux命令是否存在.markdown
@@ -30,11 +30,11 @@ tags:
 	$ type foo >/dev/null 2>&1 || { echo >&2 "I require foo but it's not installed.  Aborting."; exit 1; }
 	$ hash foo 2>/dev/null || { echo >&2 "I require foo but it's not installed.  Aborting."; exit 1; }
 
-PS: 有人会建议使用 **2>&-** 来替代 **2>/dev/null**，原因是前者更短更简洁。但实际上这两种写法的效果并非完全一样：**2>&-** 用于关闭FD2即stderr，当程序尝试写入stderr的时候它可能会导致错误。[^2]
+PS: 有人会建议使用 `2>&-` 来替代 `2>/dev/null`，原因是前者更短更简洁。但实际上这两种写法的效果并非完全一样：`2>&-` 用于关闭FD2即stderr，当程序尝试写入stderr的时候它可能会导致错误。[^2]
 
-但是当我们使用 **/bin/sh** 作为shell的时候要注意了，POSIX并没有非常明确地定义 **type** 和 **hash** 命令的退出时候的状态码。比如 **hash** 可能会在所要查找的命令本身并不存在的情况下也成功退出。所以请尽量使用 **command** 命令，它在POSIX中的退出行为被清晰地定义过。
+但是当我们使用 `/bin/sh` 作为shell的时候要注意了，POSIX并没有非常明确地定义 `type` 和 `hash` 命令的退出时候的状态码。比如 `hash` 可能会在所要查找的命令本身并不存在的情况下也成功退出。所以请尽量使用 `command` 命令，它在POSIX中的退出行为被清晰地定义过。
 
-如果我们用的是 **Bash** shell，**type** 和 **hash** 就是可以非常放心地使用了。**type** 在bash中有一个 **-P** 参数用于仅在**PATH**下搜索命令，而 **hash** 使用后还会将命令的路径进行哈希索引（这样下次你用这个命令的时候会更快一些）。
+如果我们用的是 `Bash` shell，`type` 和 `hash` 就是可以非常放心地使用了。`type` 在bash中有一个 `-P` 参数用于仅在`PATH`下搜索命令，而 `hash` 使用后还会将命令的路径进行哈希索引（这样下次你用这个命令的时候会更快一些）。
 
 以下是一个使用gdate的例子：
 
