--- a/_posts/2013-10-24-Cocos2d-x项目移植到WP8小记.markdown
+++ b/_posts/2013-10-24-Cocos2d-x项目移植到WP8小记.markdown
@@ -151,7 +151,11 @@ tags:
 
 16. 链接错误，提示找不到extension或者CocosDenshion的库：
 
-		Error	204	error LNK2001: unresolved external symbol "public: __cdecl cocos2d::extension::CCBReader::CCBReader(class cocos2d::extension::CCNodeLoaderLibrary *,class cocos2d::extension::CCBMemberVariableAssigner *,class cocos2d::extension::CCBSelectorResolver *,class cocos2d::extension::CCNodeLoaderListener *)" (??0CCBReader@extension@cocos2d@@QAA@PAVCCNodeLoaderLibrary@12@PAVCCBMemberVariableAssigner@12@PAVCCBSelectorResolver@12@PAVCCNodeLoaderListener@12@@Z)
+		Error	204	error LNK2001: unresolved external symbol "public: __cdecl 
+		cocos2d::extension::CCBReader::CCBReader(class cocos2d::extension::CCNodeLoaderLibrary *,class 
+		cocos2d::extension::CCBMemberVariableAssigner *,class cocos2d::extension::CCBSelectorResolver *,class 
+		cocos2d::extension::CCNodeLoaderListener *)" 
+		(??0CCBReader@extension@cocos2d@@QAA@PAVCCNodeLoaderLibrary@12@PAVCCBMemberVariableAssigner@12@PAVCCBSelectorResolver@12@PAVCCNodeLoaderListener@12@@Z)
 
 	尝试解决方案->属性中指定游戏的依赖，添加libExtension和CocosDenshion两个项目，另外还需要在游戏项目的属性->框架和引用页面里添加上对libExtension和CocosDenshion两个项目引用的依赖
 
