--- a/_posts/2010-08-04-Python文章归档模块的设计和代码布局的一些体会.markdown
+++ b/_posts/2010-08-04-Python文章归档模块的设计和代码布局的一些体会.markdown
@@ -22,6 +22,6 @@ tags:
 于是我们得到以上三个基础名词，设计上说，这三个名词都可以成为一个抽象类，然后再各自派生出一套对象组成完整的归档模型。
 
 结构图如下：
-![](/attachments/medish.jpg)
+![](/attachments/2010-08-04/medish.jpg)
 
 为了提高性能，使用memcache把结果做了缓存。（由于一个小问题，还调试了两三个晚上。把App Engine中模型中取key值的方法搞成了key了，其实应该是一个方法key()，前置直接进行了解析返回该对象，导致执行Pickle时不成功，杯具！）如何组织安排这些代码呢？相比于C++和Java，Python在组织代码方面几乎没有什么约束，不同的人有不同的选择。一个文件内可以组织多个类，外加一些面向过程的函数、甚至是全局变量。个人认为一种较好的方式可能是这样的：1. 面向对象和面向过程的写法可以糅合在一起，但是这些面向过程的函数应该是和处于同一文件的对象是有联系的；2. 不必局限于一个文件一个类，相同类型的类可以定义在同一个文件内；3. 公共的类定于可以放置于包的__init__.py中，例如父类，以及需要被同一个包内的其他类聚合使用的一些公共类和函数定义。当然，怎么安排只是一种个人的习惯，本质目标只有一个：代码的条理清晰就好。
