--- a/_posts/2012-07-03-Android开发陷阱.markdown
+++ b/_posts/2012-07-03-Android开发陷阱.markdown
@@ -5,7 +5,7 @@ date:       2012-07-03 20:18
 author:     "KC"
 header-img: "img/post-bg-unix-linux.jpg"
 tags:
-    - android
+    - Android
 ---
 
 ### 1、SD卡数据库
