--- a/_posts/2013-05-20-混乱的国内第三方Android应用市场.markdown
+++ b/_posts/2013-05-20-混乱的国内第三方Android应用市场.markdown
@@ -9,7 +9,7 @@ tags:
     - Cocos2d
     - C++
     - Games
-    - android
+    - Android
 ---
 
 Google这次大会是完全地面向开发者了，顺道还调侃了一下那些“只会注重竞争”的对手们。当然Android今日的如日中天，离不开Google的无私奉献和苦心耕耘，这次拿出来的数据是Android全球激活数突破9亿台，占据全球74%的市场份额；Play商店下载次数480亿次。而应用总数在去年已经突破70万大关。
