--- a/_posts/2012-04-11-ADT更新至r18后项目运行时出错.markdown
+++ b/_posts/2012-04-11-ADT更新至r18后项目运行时出错.markdown
@@ -5,7 +5,7 @@ date:       2012-04-11 16:05
 author:     "KC"
 header-img: "img/post-bg-unix-linux.jpg"
 tags:
-    - android
+    - Android
 ---
 
 据说这个现象是r17更新后就有了，从r16直接更新到r18却也有同样的问题。第三方Jar包使用报告类找不到，以下解决方法权当记录：
