--- a/_posts/2012-05-24-Android相机设置静音.markdown
+++ b/_posts/2012-05-24-Android相机设置静音.markdown
@@ -5,9 +5,9 @@ date:       2012-05-24 00:48
 author:     "KC"
 header-img: "img/post-bg-unix-linux.jpg"
 tags:
-    - android
-    - java
-    - camera
+    - Android
+    - Java
+    - Camera
 ---
 
 Android相机拍照声音是写死在C++文件中的：
