--- a/_posts/2012-05-24-定制Android原生相机支持连拍.markdown
+++ b/_posts/2012-05-24-定制Android原生相机支持连拍.markdown
@@ -5,9 +5,8 @@ date:       2012-05-24 20:00
 author:     "KC"
 header-img: "img/post-bg-unix-linux.jpg"
 tags:
-    - android
-    - camera
-    - burst
+    - Android
+    - Camera
 ---
 
 ## 1、需求
