--- a/_posts/2015-11-11-MySQL问题记录.markdown
+++ b/_posts/2015-11-11-MySQL问题记录.markdown
@@ -36,3 +36,42 @@ mysqladmin -hlocalhost -uroot extended-status
 #查看性能指标，1秒内差值 
 mysqladmin -hlocalhost -uroot extended-status --relative --sleep=1
 ```
+
+# 3. 修改密码的几种方法
+
+### 方法1： 用SET PASSWORD命令
+
+```bash
+mysql -u root
+mysql> SET PASSWORD FOR 'root'@'localhost' = PASSWORD('newpass');
+```
+
+### 方法2：用mysqladmin
+
+```bash
+mysqladmin -u root password "newpass"
+```
+
+　　如果root已经设置过密码，采用如下方法
+
+```bash
+mysqladmin -u root password oldpass "newpass"
+```
+
+### 方法3： 用UPDATE直接编辑user表
+
+```bash
+mysql -u root
+mysql> use mysql;
+mysql> UPDATE user SET Password = PASSWORD('newpass') WHERE user = 'root';
+mysql> FLUSH PRIVILEGES;
+```
+
+### 方法3： 在丢失root密码的时候，可以这样
+
+```bash
+mysqld_safe --skip-grant-tables&
+mysql -u root mysql
+mysql> UPDATE user SET password=PASSWORD("new password") WHERE user='root';
+mysql> FLUSH PRIVILEGES;
+```
