--- a/_posts/2015-11-11-MySQL问题记录.markdown
+++ b/_posts/2015-11-11-MySQL问题记录.markdown
@@ -39,14 +39,14 @@ mysqladmin -hlocalhost -uroot extended-status --relative --sleep=1
 
 # 3. 修改密码的几种方法
 
-### 方法1： 用SET PASSWORD命令
+### 方法1: SET PASSWORD命令
 
 ```bash
 mysql -u root
 mysql> SET PASSWORD FOR 'root'@'localhost' = PASSWORD('newpass');
 ```
 
-### 方法2：用mysqladmin
+### 方法2: mysqladmin
 
 ```bash
 mysqladmin -u root password "newpass"
@@ -58,7 +58,7 @@ mysqladmin -u root password "newpass"
 mysqladmin -u root password oldpass "newpass"
 ```
 
-### 方法3： 用UPDATE直接编辑user表
+### 方法3: UPDATE user
 
 ```bash
 mysql -u root
@@ -67,7 +67,7 @@ mysql> UPDATE user SET Password = PASSWORD('newpass') WHERE user = 'root';
 mysql> FLUSH PRIVILEGES;
 ```
 
-### 方法3： 在丢失root密码的时候，可以这样
+### 方法4: 丢失root密码时
 
 ```bash
 mysqld_safe --skip-grant-tables&
