--- a/_posts/2016-03-27-Go语言传值和深浅复制问题.markdown
+++ b/_posts/2016-03-27-Go语言传值和深浅复制问题.markdown
@@ -8,6 +8,10 @@ tags:
     - Golang
 ---
 
+# 目录：
+{:.no_toc}
+* any list
+{:toc}
 
 关于传值还是传引用的问题，在[go的调用规范](https://golang.org/ref/spec#Calls)中有提到，在函数调用中是传值的（是否有其他的例外情况，我们后面再来考察）,但是在下面的例子中，我们将看到大部分情况下，这句话是好理解的，但是还是会有意外。那么这句话应该怎么理解呢？
 
