--- a/_posts/2015-10-19-Jenkins问题记录.markdown
+++ b/_posts/2015-10-19-Jenkins问题记录.markdown
@@ -11,6 +11,11 @@ tags:
     - Git
 ---
 
+# 目录：
+{:.no_toc}
+* any list
+{:toc}
+
 # 1. Jenkins杀子进程问题
 
 从v1.260开始，Jenkins会将构建阶段产生的子进程杀死。所以我们有这样一个需求：先起一个辅助系统，然后运行**gradle test**进行单元测试，可能会发现辅助系统在测试结束后不复存在。如果我们希望该系统一直存在，需要禁止Jenkins杀进程的特性。
