--- a/_posts/2016-05-16-vim_faq.markdown
+++ b/_posts/2016-05-16-vim_faq.markdown
@@ -100,3 +100,67 @@ Ctrl+w >
 # 减小当前窗口宽度
 Ctrl+w <
 ```
+
+## 1.6 分屏中打开目录
+
+在编辑文件的时候，可以使用命令在新的分屏中浏览当前文件所在目录。
+
+```bash
+# 水平分屏，在下部窗口中浏览目录
+:He
+
+# 水平分屏，在上部窗口中浏览目录
+:He!
+
+# 垂直分屏，在左侧窗口中浏览目录
+:Ve
+
+# 垂直分屏，在右侧窗口中浏览目录
+:Ve!
+```
+
+## 1.7 分屏同步移动光标
+
+要同步光标，注意应该先将要同步的分屏的光标移动到需要的位置，然后在多个分屏中分别执行命令：
+
+```bash
+# 设置同步移动
+:set scb
+
+# 解开同步移动的配置
+:set scb!
+```
+
+## 1.8 Tab分屏
+
+```bash
+# 打开新的Tab页
+:Te
+
+# 同时以tab的方式打开多个文件
+vim -p file1 file2 file3
+
+# 跳转到下一个Tab页，注意没有分号
+gt
+
+# 跳转到上一个Tab页，注意没有分号
+gT
+
+# 跳转到指定Tab页，注意没有分号，n是具体数字
+{n}gt
+# 或者：
+:tabm {n}
+
+# 浏览当前所有tab页的概况：
+:tabs
+
+# 关闭Tab页，如果后面指定了数字，那就关闭指定页，如果没有就关闭当前页
+:tabclose {n}
+```
+
+> BTW
+>
+> 1. 关于切换tab页，gvim使用`Ctrl+PageDown`和`Ctrl+PageUp`来进行切换
+> 
+> 2. 如果你想把buffer中的文件全转成tab的话，你可以使用下面的命令:
+> `:bufdo tab split`
