--- a/_posts/2016-05-16-vim_faq.markdown
+++ b/_posts/2016-05-16-vim_faq.markdown
@@ -164,3 +164,49 @@ gT
 > 
 > 2. 如果你想把buffer中的文件全转成tab的话，你可以使用下面的命令:
 > `:bufdo tab split`
+
+# 2. 缓冲区
+
+# 2.1 
+
+用`:E`命令浏览目录时打开的文件都保存在缓冲区中。可以用以下命令查看缓冲区内容：
+
+![查看缓冲期内容](/attachments/2016-05-16/vim-1.png)
+
+```bash
+# 查看缓冲区，其中标有`%a`的一行表示当前激活状态的缓冲区。
+# :ls输出如上图。
+:ls
+
+# 切换到指定缓冲区继续编辑文件, n代表缓冲区编号，在ls命令中能看到
+:buffer {n}
+# 或者:(filepath是文件路径，在ls命令中能看到)
+:buffer {filepath}
+```
+
+还可以使用以下命令快速在缓冲区间切换：
+```bash
+# 移动到下一缓冲区，缩写为`:bn`
+:bnext
+
+# 移动到上一缓冲区，缩写为`:bp`
+:bprevious
+
+# 移动到最后一个缓冲区文件，缩写为`:bl`
+:blast
+
+# 移动到第一个缓冲区文件，缩写为`:bf`
+:bfirst
+```
+
+前面我们提到一个`%a`标识符，这个表示当前被激活的文件。相关的标记还有：
+
+```
+- – （非活动的缓冲区）
+- a （当前被激活缓冲区）
+- h （隐藏的缓冲区）
+- % （当前的缓冲区）
+- # （交换缓冲区）
+- = （只读缓冲区）
+- + （已经更改的缓冲区）
+```
