--- a/_posts/2016-05-16-vim_faq.markdown
+++ b/_posts/2016-05-16-vim_faq.markdown
@@ -209,3 +209,25 @@ gT
 - = （只读缓冲区）
 - + （已经更改的缓冲区）
 ```
+# 3. 关键字补全
+
+无插件的vim也支持关键字补全，补全文本的来源是当前所编辑的文件本身。
+
+```bash
+# 自动提示并补全
+Ctrl+n
+
+# 光标回到默认补全之前的位置
+Ctrl+p
+```
+
+另外还有`Ctrl+x`开头的补全快捷键：
+
+```bash
+Ctrl + X 和 Ctrl + D 宏定义补齐
+Ctrl + X 和 Ctrl + ] 是Tag 补齐
+Ctrl + X 和 Ctrl + F 是文件名 补齐
+Ctrl + X 和 Ctrl + I 也是关键词补齐，但是关键后会有个文件名，告诉你这个关键词在哪个文件中
+Ctrl + X 和 Ctrl +V 是表达式补齐
+Ctrl + X 和 Ctrl +L 整个行补齐
+```
