--- a/_posts/2016-05-16-vim_faq.markdown
+++ b/_posts/2016-05-16-vim_faq.markdown
@@ -244,7 +244,7 @@ Ctrl + X 和 Ctrl +L 整个行补齐
 - `e`: 移动到下一个单词结尾，`E`: 移动到下一个单词（空白字符分隔）结尾(end)
 - `b`: 移动到前一个单词
 - `G`: 文件最后一行
-- `gg`: 文件第一行
+- `gg`: 文件第一行，相当于`1G`或者`:1`
 - `{n}G`: 或者 `:{n}`: 跳转到文件第n行
 - `{n}e`: 往后移动n个单词
 
