--- a/_posts/2016-05-16-vim_faq.markdown
+++ b/_posts/2016-05-16-vim_faq.markdown
@@ -33,50 +33,25 @@ vim -o3 file1 file2 file3
 
 ## 1.2 关闭分屏
 
-```bash
-# 关闭当前分屏，当若当前已是最后一个分屏则不会退出
-Ctrl+w c
-
-# 关闭当前分屏，如果只剩最后一个了，则退出Vim
-Ctrl+w q
-```
+- `Ctrl+w c`: 关闭当前分屏，当若当前已是最后一个分屏则不会退出
+- `Ctrl+w q`: 关闭当前分屏，如果只剩最后一个了，则退出Vim
 
 ## 1.3 编辑文件时增加分屏
 
-```bash
-# 水平分割当前打开的文件
-Ctrl+w s
-
-# 水平分割窗口，并在新窗口打开一个新的文件。
-:sp filename
-
-# 垂直分割当前打开的文件
-Ctrl+w v
-
-# 垂直分割窗口，并在新窗口打开一个新的文件。
-:vsp filename
-```
+- `Ctrl+w s`: 水平分割当前打开的文件
+- `:sp filename`: 水平分割窗口，并在新窗口打开一个新的文件。
+- `Ctrl+w v`: 垂直分割当前打开的文件
+- `:vsp filename`: 垂直分割窗口，并在新窗口打开一个新的文件。
 
 ## 1.4 在分屏间移动光标
 
 Vim中的光标键是`h, j, k, l`，要在各个屏间切换，只需要先按一下`Ctrl+w`
 
-```bash
-# 光标左移
-Ctrl+w h
-
-# 光标右移
-Ctrl+w l
-
-# 光标上移
-Ctrl+w k
-
-# 光标下移
-Ctrl+w j
-
-# 光标移动到下一个分屏中
-Ctrl+w w
-```
+- `Ctrl+w h`: 光标左移
+- `Ctrl+w l`: 光标右移
+- `Ctrl+w k`: 光标上移
+- `Ctrl+w j`: 光标下移
+- `Ctrl+w w`: 光标移动到下一个分屏中
 
 > BTW：
 > 
@@ -84,79 +59,40 @@ Ctrl+w w
 
 ## 1.5 调节屏幕尺寸
 
-```bash
-# 让所有窗口等大
-Ctrl+w =
-
-# 增加当前窗口高度
-Ctrl+w +
-
-# 减小当前窗口高度
-Ctrl+w -
-
-# 增加当前窗口宽度
-Ctrl+w >
-
-# 减小当前窗口宽度
-Ctrl+w <
-```
+- `Ctrl+w =`: 让所有窗口等大
+- `Ctrl+w +`: 增加当前窗口高度
+- `Ctrl+w -`: 减小当前窗口高度
+- `Ctrl+w >`: 增加当前窗口宽度
+- `Ctrl+w <`: 减小当前窗口宽度
 
 ## 1.6 分屏中打开目录
 
 在编辑文件的时候，可以使用命令在新的分屏中浏览当前文件所在目录。
 
-```bash
-# 水平分屏，在下部窗口中浏览目录
-:He
-
-# 水平分屏，在上部窗口中浏览目录
-:He!
-
-# 垂直分屏，在左侧窗口中浏览目录
-:Ve
-
-# 垂直分屏，在右侧窗口中浏览目录
-:Ve!
-```
+- `:He`: 水平分屏，在下部窗口中浏览目录
+- `:He!`: 水平分屏，在上部窗口中浏览目录
+- `:Ve`: 垂直分屏，在左侧窗口中浏览目录
+- `:Ve!`: 垂直分屏，在右侧窗口中浏览目录
 
 ## 1.7 分屏同步移动光标
 
 要同步光标，注意应该先将要同步的分屏的光标移动到需要的位置，然后在多个分屏中分别执行命令：
 
-```bash
-# 设置同步移动
-:set scb
-
-# 解开同步移动的配置
-:set scb!
-```
+- `:set scb`: 设置同步移动
+- `:set scb!`: 解开同步移动的配置
 
 ## 1.8 Tab分屏
 
 ```bash
-# 打开新的Tab页
-:Te
-
 # 同时以tab的方式打开多个文件
 vim -p file1 file2 file3
-
-# 跳转到下一个Tab页，注意没有分号
-gt
-
-# 跳转到上一个Tab页，注意没有分号
-gT
-
-# 跳转到指定Tab页，注意没有分号，n是具体数字
-{n}gt
-# 或者：
-:tabm {n}
-
-# 浏览当前所有tab页的概况：
-:tabs
-
-# 关闭Tab页，如果后面指定了数字，那就关闭指定页，如果没有就关闭当前页
-:tabclose {n}
 ```
+- `:Te`: 打开新的Tab页
+- `gt`: 跳转到下一个Tab页，注意没有分号
+- `gT`: 跳转到上一个Tab页，注意没有分号
+- `{n}gt` 或 `:tabm {n}`: 跳转到指定Tab页，注意没有分号，n是具体数字。
+- `:tabs`: 浏览当前所有tab页的概况
+- `:tabclose {n}` 关闭Tab页，如果后面指定了数字，那就关闭指定页，如果没有就关闭当前页
 
 > BTW
 >
@@ -171,73 +107,49 @@ gT
 
 ![查看缓冲期内容](/attachments/2016-05-16/vim-1.png)
 
-```bash
-# 查看缓冲区，其中标有`%a`的一行表示当前激活状态的缓冲区。
-# :ls输出如上图。
-:ls
-
-# 切换到指定缓冲区继续编辑文件, n代表缓冲区编号，在ls命令中能看到
-:buffer {n}
-# 或者:(filepath是文件路径，在ls命令中能看到)
-:buffer {filepath}
-```
+- `:ls`: 查看缓冲区，其中标有`%a`的一行表示当前激活状态的缓冲区。`:ls`输出如上图。
+- `:buffer {n}`: 切换到指定缓冲区继续编辑文件, n代表缓冲区编号，在ls命令中能看到
+- `:buffer {filepath}`: 同上，但是通过文件名切换
 
 还可以使用以下命令快速在缓冲区间切换：
-
-```bash
-# 移动到下一缓冲区，缩写为`:bn`
-:bnext
-
-# 移动到上一缓冲区，缩写为`:bp`
-:bprevious
-
-# 移动到最后一个缓冲区文件，缩写为`:bl`
-:blast
-
-# 移动到第一个缓冲区文件，缩写为`:bf`
-:bfirst
-```
+ 
+- `:bnext`: 移动到下一缓冲区，缩写为`:bn`
+- `:bprevious`: 移动到上一缓冲区，缩写为`:bp`
+- `:blast`: 移动到最后一个缓冲区文件，缩写为`:bl`
+- `:bfirst`: 移动到第一个缓冲区文件，缩写为`:bf`
 
 前面我们提到一个`%a`标识符，这个表示当前被激活的文件。相关的标记还有：
 
-```
-- – （非活动的缓冲区）
-- a （当前被激活缓冲区）
-- h （隐藏的缓冲区）
-- % （当前的缓冲区）
-- # （交换缓冲区）
-- = （只读缓冲区）
-- + （已经更改的缓冲区）
-```
+- `–` （非活动的缓冲区）
+- `a` （当前被激活缓冲区）
+- `h` （隐藏的缓冲区）
+- `%` （当前的缓冲区）
+- `#` （交换缓冲区）
+- `=` （只读缓冲区）
+- `+` （已经更改的缓冲区）
+
 
 # 3. 关键字补全
 
 无插件的vim也支持关键字补全，补全文本的来源是当前所编辑的文件本身。
 
-```bash
-# 自动提示并补全
-Ctrl+n
-
-# 光标回到默认补全之前的位置
-Ctrl+p
-```
+- `Ctrl+n`: 自动提示并补全
+- `Ctrl+p`: 光标回到默认补全之前的位置
 
 另外还有`Ctrl+x`开头的补全快捷键：
 
-```bash
-Ctrl + X 和 Ctrl + D 宏定义补齐
-Ctrl + X 和 Ctrl + ] 是Tag 补齐
-Ctrl + X 和 Ctrl + F 是文件名 补齐
-Ctrl + X 和 Ctrl + I 也是关键词补齐，但是关键后会有个文件名，告诉你这个关键词在哪个文件中
-Ctrl + X 和 Ctrl +V 是表达式补齐
-Ctrl + X 和 Ctrl +L 整个行补齐
-```
+- `Ctrl + X` 和 `Ctrl + D` 宏定义补齐
+- `Ctrl + X` 和 `Ctrl + ]` 是Tag 补齐
+- `Ctrl + X` 和 `Ctrl + F` 是文件名 补齐
+- `Ctrl + X` 和 `Ctrl + I` 也是关键词补齐，但是关键后会有个文件名，告诉你这个关键词在哪个文件中
+- `Ctrl + X` 和 `Ctrl +V` 是表达式补齐
+- `Ctrl + X` 和 `Ctrl +L` 整个行补齐
 
 # 4. 移动光标
 
 - `h`,`j`,`k`,`l`: 左/下/上/右移动一个字符
 - `0`: 数字零，到行头
-- - `$`: 到本行行尾
+- `$`: 到本行行尾
 - `^`: 到本行第一个不是blank字符的位置
 - `g_`: 到本行最后一个不是blank字符的位置
 - `w`: 移动到下一个单词开头，`W`: 移动到下一个单词（空白字符分隔）开头(word)
