--- a/_posts/2016-05-16-vim_faq.markdown
+++ b/_posts/2016-05-16-vim_faq.markdown
@@ -120,13 +120,13 @@ vim -p file1 file2 file3
 
 前面我们提到一个`%a`标识符，这个表示当前被激活的文件。相关的标记还有：
 
-- `–` （非活动的缓冲区）
-- `a` （当前被激活缓冲区）
-- `h` （隐藏的缓冲区）
-- `%` （当前的缓冲区）
-- `#` （交换缓冲区）
-- `=` （只读缓冲区）
-- `+` （已经更改的缓冲区）
+- `–`: 非活动的缓冲区
+- `a`: 当前被激活缓冲区
+- `h`: 隐藏的缓冲区
+- `%`: 当前的缓冲区
+- `#`: 交换缓冲区
+- `=`: 只读缓冲区
+- `+`: 已经更改的缓冲区
 
 
 # 3. 关键字补全
