--- a/_posts/2016-05-16-vim_faq.markdown
+++ b/_posts/2016-05-16-vim_faq.markdown
@@ -166,7 +166,7 @@ vim -p file1 file2 file3
 - `yy`: 复制行，相当于 `ddP`
 - `p`: 光标后粘贴；`P`: 光标前粘贴
 - `u`: undo
-- you`Ctrl-r`: redo
+- `Ctrl-r`: redo
 - `dw`: 剪切单词，`dW`: 剪切单词（空白字符分隔）
 - `ye`: 复制一个单词
 - `gu`: 变小写，`gU`: 变大写。用法是：`guw`会使光标所在单词变小写；`gU$`会使光标到行尾所有字符变大写；`gu3e`会使光标往后三个单词变成小写。
