--- a/_posts/2016-05-16-vim_faq.markdown
+++ b/_posts/2016-05-16-vim_faq.markdown
@@ -93,9 +93,9 @@ vim -p file1 file2 file3
 	:Te                     打开新的Tab页
 	gt                      跳转到下一个Tab页，注意没有分号
 	gT                      跳转到上一个Tab页，注意没有分号
-	{n}gt 或 :tabm {n}      跳转到指定Tab页，注意没有分号，n是具体数字。
+	{n}gt或:tabm {n}        跳转到指定Tab页，注意没有分号，n是具体数字。
 	:tabs                   浏览当前所有tab页的概况
-	:tabclose {n}          关闭Tab页，如果后面指定了数字，那就关闭指定页，如果没有就关闭当前页
+	:tabclose {n}           关闭Tab页，如果后面指定了数字，那就关闭指定页，如果没有就关闭当前页
 
 > BTW
 >
@@ -179,7 +179,7 @@ vim -p file1 file2 file3
 	dw        剪切单词，`dW`: 剪切单词（空白字符分隔）
 	D         剪切到行尾
 	ye        复制一个单词
-	gu        变小写，`gU`: 变大写。用法是：`guw`会使光标所在单词变小写；`gU$`会使光标到行尾所有字符变大写；`gu3e`会使光标往后三个单词变成小写。
+	gU和gu     变大/小写。用法是：`guw`会使光标所在单词变小写；`gU$`会使光标到行尾所有字符变大写；`gu3e`会使光标往后三个单词变成小写。
 	>>和<<    向右/向左缩进当前行
 	2,8>      2-8行缩进，`4,6<`: 4-6行反缩进
 	v         进入选择模式，移动光标选择多行，然后执行`>`缩进一次，执行`2>`则会缩进两次
