--- a/_posts/2016-05-16-vim_faq.markdown
+++ b/_posts/2016-05-16-vim_faq.markdown
@@ -153,6 +153,7 @@ vim -p file1 file2 file3
 	 h,j,k,l   左/下/上/右移动一个字符
 	       0   数字零，到行头
 	       $   到本行行尾
+	       %   匹配括号：() or [] or {}
 	       ^   到本行第一个不是blank字符的位置
 	      g_   到本行最后一个不是blank字符的位置
 	       w   移动到下一个单词开头，`W`: 移动到下一个单词（空白字符分隔）开头(word)
