--- a/_posts/2016-05-16-vim_faq.markdown
+++ b/_posts/2016-05-16-vim_faq.markdown
@@ -173,27 +173,32 @@ vim -p file1 file2 file3
 
 # 5. 单词或行编辑
 
-	 r        替换当前字符
+	 r        replace,替换当前字符
 	 x/X      小写x删除光标处字符，大写X删除光标前字符
 	 i/I      小写i在光标前插入，大写I在行首插入
      a/A      小写a在光标后插入，大写A在行尾插入
-	 d        删除命令，删除后会将内容复制到剪切板。相当于剪切命令。有以下组合：
-			  dd   删除当前行，重复两次命令为删除当前行。
-			  d0   删除到行首，同样`d$`表示删除到行尾（大写`D`也表示删除到行尾）
-			  dw   删除光标后单词，`dW`: 剪切单词（空白字符分隔）；同样还有`de`和`dE`
-			  db   删除光标前单词，同样`dB`会删除光标前以空白字分隔符计算的单词
-			   D   剪切到行尾，和`d$`相同
-	 c        删除并改变状态的插入模式。其中删除部分和`d`命令相同。同样有`cc`,`cw`,`cE`等等组合
-	 y        复制命令，有和`d`命令同样的组合
-			  yy   复制行，相当于 `ddP`
-	 p        光标后粘贴；`P`: 光标前粘贴
 	 u        undo
 	ctrl + u  在输入模式下执行的撤销操作
 	ctrl - r  redo
-	gU/gu    变大/小写。用法是：
-			  guw   会使光标所在单词变小写
-			  gU$   会使光标到行尾所有字符变大写
+
+	 d        删除命令，删除后会将内容复制到剪切板。相当于剪切命令。有以下组合：
+	          dd   删除当前行，重复两次命令为删除当前行。
+	          d0   删除到行首，同样`d$`表示删除到行尾（大写`D`也表示删除到行尾）
+	          dw   删除光标后单词，`dW`: 剪切单词（空白字符分隔）；同样还有`de`和`dE`
+	          db   删除光标前单词，同样`dB`会删除光标前以空白字分隔符计算的单词
+	           D   剪切到行尾，和`d$`相同
+
+	 c        删除并改变状态的插入模式。其中删除部分和`d`命令相同。同样有`cc`,`cw`,`cE`等等组合
+	 y        复制命令，有和`d`命令同样的组合
+	          yy   复制行，相当于 `ddP`
+	 p        光标后粘贴；`P`: 光标前粘贴
+
+
+    gU/gu     变大/小写。用法是：
+	          guw   会使光标所在单词变小写
+	          gU$   会使光标到行尾所有字符变大写
 	          gu3e  会使光标往后三个单词变成小写。
+
 	>>/<<    >>向右缩进当前行，<<向左缩进当前行
 	2,8>      2-8行缩进，`4,6<`: 4-6行反缩进
 	v         进入选择模式，移动光标选择多行，然后执行`>`缩进一次，执行`2>`则会缩进两次
