--- a/_posts/2016-05-16-vim_faq.markdown
+++ b/_posts/2016-05-16-vim_faq.markdown
@@ -165,6 +165,10 @@ vim -p file1 file2 file3
 	      gg   文件第一行，相当于`1G`或者`:1`
 	    {n}G   或者 `:{n}`: 跳转到文件第n行
 	    {n}e   往后移动n个单词
+	    f{c}   行内正向移动到下一个字符C，可以用`;`和`,`移动到上一个位置和下一个位置
+	    F{c}   行内反向移动到下一个字符C，可以用`;`和`,`移动到上一个位置和下一个位置
+	    t{c}   行内正向移动到下一个字符C的前一个字符，所以反复用`T{c}`的光标位置是不变的
+	    T{c}   行内反向移动到上一个字符C的后一个字符，所以反复用`T{c}`的光标位置是不变的
 	ctrl + e   向上滚动一行
 	ctrl + y   向下滚动一行
 	ctrl + u   向上滚动半屏
