--- a/_posts/2016-05-16-vim_faq.markdown
+++ b/_posts/2016-05-16-vim_faq.markdown
@@ -173,6 +173,11 @@ vim -p file1 file2 file3
 	ctrl + y   向下滚动一行
 	ctrl + u   向上滚动半屏
 	ctrl + d   向下滚动半屏
+	ctrl + ]   跳转到关键字的定义处
+	ctrl + o   插入模式下移动光标，后接着输入h/j/k/l可以向左/下/上/右移动一个字符。
+	           ctrl+o 0    插入模式下移动光标到行首
+	           ctrl+o A    插入模式下移动光标到行尾
+	           ctrl+o ^    插入模式下移动光标到行首第一个非空白字符处
 	
 
 # 5. 单词或行编辑
@@ -180,10 +185,11 @@ vim -p file1 file2 file3
 	 r        replace,替换当前字符
 	 x/X      小写x删除光标处字符，大写X删除光标前字符
 	 i/I      小写i在光标前插入，大写I在行首插入
-     a/A      小写a在光标后插入，大写A在行尾插入
+	 a/A      小写a在光标后插入，大写A在行尾插入
 	 u        undo
 	ctrl + u  在输入模式下执行的撤销操作
 	ctrl - r  redo
+	ctrl + c  回到普通模式。`esc`和`ctrl + [`也是会到普通模式的按键
 
 	 d        删除命令，删除后会将内容复制到剪切板。相当于剪切命令。有以下组合：
 	          dd   删除当前行，重复两次命令为删除当前行。
@@ -205,4 +211,5 @@ vim -p file1 file2 file3
 
 	>>/<<    >>向右缩进当前行，<<向左缩进当前行
 	2,8>      2-8行缩进，`4,6<`: 4-6行反缩进
+	
 	v         进入选择模式，移动光标选择多行，然后执行`>`缩进一次，执行`2>`则会缩进两次
