--- a/_posts/2016-05-16-vim_faq.markdown
+++ b/_posts/2016-05-16-vim_faq.markdown
@@ -180,7 +180,7 @@ vim -p file1 file2 file3
 	           ctrl+o ^    插入模式下移动光标到行首第一个非空白字符处
 	
 
-# 5. 单词或行编辑
+# 5. 编辑文档
 
 	 r        replace,替换当前字符
 	 x/X      小写x删除光标处字符，大写X删除光标前字符
@@ -209,7 +209,9 @@ vim -p file1 file2 file3
 	          gU$   会使光标到行尾所有字符变大写
 	          gu3e  会使光标往后三个单词变成小写。
 
-	>>/<<    >>向右缩进当前行，<<向左缩进当前行
+	>>/<<     >>向右缩进当前行，<<向左缩进当前行
 	2,8>      2-8行缩进，`4,6<`: 4-6行反缩进
 	
 	v         进入选择模式，移动光标选择多行，然后执行`>`缩进一次，执行`2>`则会缩进两次
+	ctrl+v    列编辑
+	          `ctrl+v`选择列，然后`I`或`A`切换到插入模式编辑列，最后`esc`可以在所选每一列上应用。
