add replace mode: r/R/gr/gR

--- a/_posts/2016-05-16-vim_faq.markdown
+++ b/_posts/2016-05-16-vim_faq.markdown
@@ -177,7 +177,10 @@ vim -p file1 file2 file3
 
 # 5. 单词或行编辑
 
-	   r      replace,替换当前字符
+	   r      replace,替换当前字符。
+	  gr      当前字符虚拟替换模式。该模式下的<Tab>字符会在输入第8个字符是才将<tab>替换掉。
+	   R      替换模式，可以替换多个字符，直到按<Esc>退出。
+	  gR      虚拟替换模式。该模式下的<Tab>字符会在输入第8个字符是才将<tab>替换掉。
 	 x/X      小写x删除光标处字符，大写X删除光标前字符
 	 i/I      小写i在光标前插入，大写I在行首插入
      a/A      小写a在光标后插入，大写A在行尾插入
