--- a/_posts/2016-05-16-vim_faq.markdown
+++ b/_posts/2016-05-16-vim_faq.markdown
@@ -208,7 +208,8 @@ vim -p file1 file2 file3
 
 	>>/<<     >>向右缩进当前行，<<向左缩进当前行
 	 2,8>     2-8行缩进，`4,6<`: 4-6行反缩进
-	    v     进入选择模式，移动光标选择多行，然后执行`>`缩进一次，执行`2>`则会缩进两次
+	  v/V     进入选择模式，移动光标选择多行，然后执行`>`缩进一次，执行`2>`则会缩进两次
+              其中小写v为进入字符选择选择模式，大写V为行选择模式。可以按`o`切换高亮端。
     <C-v>     进入列编辑模式选择需要编辑的列，例如选择后按A/I开始编辑，完成后按<esc>应用到所有列
 
 # 6. 缩进
