--- a/_posts/2016-05-16-vim_faq.markdown
+++ b/_posts/2016-05-16-vim_faq.markdown
@@ -230,9 +230,25 @@ vim -p file1 file2 file3
 	  (no)sta    (no)smarttab，开启后在行首按<Tab>将会sw个空格，否则加入t个空格
 	(no)paste    粘贴选项打开的时候，从剪切板粘贴过来的文本不会自动缩进，可以在粘贴完之后再关闭该选项
     
+# 8. 折叠
+
+代码的折叠，可以方便掌控程序的主要逻辑，也便于代码的阅读、查找。使用折叠，首先要设置折叠方式，即设置vim中fdm（foldmethod的缩写）的值，例如fdm设置为indent，即依据代码的缩进进行自动折叠。vim中有六种fdm可以设置，参考详细帮助： :help fold。常用的折叠打开、关闭操作如下：
+
+	zc             折叠代码
+	zC             递归折叠代码
+	zo             取消折叠代码
+	zO             递归取消折叠代码
+	zM             折叠整个文件
+	zR             取消整个文件的折叠
+	:m,nfoldopen   折叠m,n行中的代码
+	:m,nfoldclose  取消m,n行代码的折叠
 	
-# 7. 环境变量和配置项
+# 8. 环境变量和配置项
 
 	:echo $VIMRUNTIME    查看vim环境变量$VIMRUNTIME的值
 	:set fileencodings?  查看fileencodings配置项的值
 	:set history=200     设置history配置项的值（该值默认为20）
+
+# 9. 其他
+
+	:%!python -m json.tool      json代码格式化
