fixes spell error

--- a/_posts/2016-08-11-GRP基于Go的反向代理.md
+++ b/_posts/2016-08-11-GRP基于Go的反向代理.md
@@ -46,7 +46,7 @@ GRP 希望让部署和配置简单化，启动可以无需root权限，并且能
 将以上三个文件上传到你的服务器中，直接执行即可，例如：
 
 ```bash
-$ nohub ./grp > /dev/null 2>stderr.log &
+$ nohup ./grp > /dev/null 2>stderr.log &
 ```
 
 --
