--- a/_posts/2016-08-11-GRP基于Go的反向代理.md
+++ b/_posts/2016-08-11-GRP基于Go的反向代理.md
@@ -51,6 +51,11 @@ $ nohup ./grp > /dev/null 2>stderr.log &
 
 --
 
+### TODO
+
+- SSL支持，当本地服务不是起在80和443端口时，在做域名替换的时候要根据远程服务器的Schema或者端口号智能切换本地端口号。这个问题目前在登录accounts.google.com时会出现。
+- 登录和会话保持
+
 ### 引用
 
 - [GRP - Just A Reverse Proxy Implemented with Golang](https://github.com/kimiazhu/grp)
