--- a/_posts/2016-08-11-GRP基于Go的反向代理.md
+++ b/_posts/2016-08-11-GRP基于Go的反向代理.md
@@ -55,6 +55,8 @@ $ nohup ./grp > /dev/null 2>stderr.log &
 
 - SSL支持，当本地服务不是起在80和443端口时，在做域名替换的时候要根据远程服务器的Schema或者端口号智能切换本地端口号。这个问题目前在登录accounts.google.com时会出现。
 - 登录和会话保持
+- on-file-change auto reload
+- multi backend services and load balance support.
 
 ### 引用
 
