--- a/_posts/2016-08-11-GRP基于Go的反向代理.md
+++ b/_posts/2016-08-11-GRP基于Go的反向代理.md
@@ -33,7 +33,9 @@ GRP 希望让部署和配置简单化，启动可以无需root权限，并且能
 
 如果你没有自己的DNS服务器，或者无法指定多个子域名，也可以通过顶级域名或者IP地址访问，但由于顶级域名和IP地址只有一个，所以这时候只能支持代理单个网站。
 
-配置示例文件在conf.yml中。
+配置示例文件在[conf.yml](https://github.com/kimiazhu/grp/blob/master/conf.yml)中。你可以指定运行的端口号、配对的本地服务器和它所代理的远程服务器地址。当要在一个应用中代理多个远程服务器的时候，需要本地有不同的子域名解析。
+
+示例文件中，proxy下一级的google/gmail/googleAccount等这几个关键字是任意指定的（不能重复），你可以换成自己喜欢的其他名字，也可以自行增加其他的网站。目前我测试过的站点包括google和baidu的搜索功能。另外还存在两个`remoteSchema`/`localSchema`关键字，可以是`http`和`https`，默认值为`http`。由于部分网站必须通过https访问（比如百度），对这类网站可以手工指定`remoteSchema: https`。
 
 ### 使用
 
@@ -53,10 +55,12 @@ $ nohup ./grp > /dev/null 2>stderr.log &
 
 ### TODO
 
-- SSL支持，当本地服务不是起在80和443端口时，在做域名替换的时候要根据远程服务器的Schema或者端口号智能切换本地端口号。这个问题目前在登录accounts.google.com时会出现。
-- 登录和会话保持
+- 单域名支持，无需DNS配置多个子域名的情况代理多个远程地址。(P0)
+- SSL支持，当本地服务不是起在80和443端口时，在做域名替换的时候要根据远程服务器的Schema或者端口号智能切换本地端口号。这个问题目前在登录accounts.google.com时会出现。(P1)
+- 登录和会话保持。(P1)
 - on-file-change auto reload
-- multi backend services and load balance support.
+- multi backend services and load balance support
+- 自动感知网站是否使用https? 避免手工在配置文件中进行配置。
 
 ### 引用
 
